Add basic memcached client
This is almost the most basic memcached client possible. It opens the
TCP connection, sends commands, and reads the responses.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "npm run jest",
+    "jest": "jest"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^29.3.1"
+  }
 }
