--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run jest",
+    "test": "npm run lint && npm run jest",
+    "lint": "eslint src __tests__",
     "jest": "jest"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "8.25.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "27.1.1",
+    "eslint-plugin-no-only-tests": "3.1.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "6.0.1",
+    "eslint-plugin-security": "1.5.0",
+    "eslint-plugin-spellcheck": "0.0.19",
+    "eslint-plugin-standard": "5.0.0",
     "jest": "^29.3.1"
   }
 }
