--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "generic-pool": "^3.9.0"
+  },
   "devDependencies": {
     "eslint": "8.25.0",
     "eslint-config-standard": "17.0.0",
