--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "generic-pool": "^3.9.0"
+    "generic-pool": "^3.9.0",
+    "hashring": "^3.2.0"
   },
   "devDependencies": {
     "eslint": "8.25.0",
