--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,6 +15,13 @@ jobs:
       matrix:
         node-version: [14.x, 16.x, 18.x, 19.x]
 
+    services:
+      memcached:
+        image: memcached
+        ports:
+          - 11211:11211
+          - 11311:11211
+
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
