--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "27.1.1",
+    "eslint-plugin-n": "15.5.1",
     "eslint-plugin-no-only-tests": "3.1.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.1",
