--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -10,6 +10,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      memcached:
+        image: memcached
+        ports:
+          - 11211:11211
+          - 11311:11211
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
