--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@joshbetz/memcached",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "npm run lint && npm run jest",
     "lint": "eslint src __tests__",
