--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "@joshbetz/memcached",
   "version": "0.1.1",
   "description": "",
-  "main": "src/index.js",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "test": "npm run lint && npm run jest",
     "lint": "eslint src __tests__",
-    "jest": "jest"
+    "jest": "jest",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test"
   },
   "author": "",
   "license": "MIT",
@@ -15,6 +19,10 @@
     "hashring": "^3.2.0"
   },
   "devDependencies": {
+    "@jest/globals": "29.3.1",
+    "@types/jest": "29.2.3",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
     "eslint": "8.25.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
@@ -25,6 +33,8 @@
     "eslint-plugin-promise": "6.0.1",
     "eslint-plugin-security": "1.5.0",
     "eslint-plugin-spellcheck": "0.0.19",
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "ts-jest": "29.0.3",
+    "typescript": "4.9.3"
   }
 }
