Don't run npm test for prepublish
We can't really do this because it requires external dependencies
(memcached);

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test": "npm run lint && npm run jest",
     "lint": "eslint src __tests__",
     "jest": "jest",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test"
+    "prepare": "npm run build"
   },
   "author": "",
   "license": "MIT",
