--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
     "hashring": "^3.2.0"
   },
   "devDependencies": {
-    "@jest/globals": "29.3.1",
-    "@types/jest": "29.2.3",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
-    "eslint": "8.25.0",
-    "eslint-config-standard": "17.0.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "27.1.1",
-    "eslint-plugin-n": "15.5.1",
-    "eslint-plugin-no-only-tests": "3.1.0",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "6.0.1",
-    "eslint-plugin-security": "1.5.0",
-    "eslint-plugin-spellcheck": "0.0.19",
+    "@jest/globals": "^29.3.1",
+    "@types/jest": "^29.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.25.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.1",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-security": "^1.5.0",
+    "eslint-plugin-spellcheck": "^0.0.19",
     "jest": "^29.3.1",
-    "ts-jest": "29.0.3",
-    "typescript": "4.9.3"
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.3"
   }
 }
