--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
-  }
+  },
+  "engines": {
+    "node": ">=18.0"
+  },
 }
